# SiteScraper

./: .replit  11.txt  ANALYSIS_REPORT.md  FINAL_CONSOLIDATION_REPORT.md  PAGE_STATUS_REPORT.md  README.md  ad_blocker.py  advanced_ad_blocker.py  advanced_analyzer.py  advanced_extractor.py  advanced_tools_manager.py  ak_sv_test_report.md  analysis_report.md  analyzer.py  app.py  arabic_generator.py  clone_website.py  cloudflare_test.py  cms_detector.py  competitor_analyzer.py  config.py  core.py  enhanced_advanced_tools_manager.py  enhanced_crawler.py  enhanced_routes.py  enhanced_website_extractor.py  example_usage.py  extraction_results.json  extraction_ui_handler.py  fast_extractor.py  flask_integration_example.py  gunicorn_fix.py  index.html  main.py  main_simple.py  minimal_app.py  models.py  optimized_extractor.py  performance_analyzer.py  project_analysis_comparison.md  (+45 more)
11/: comprehensive_test_report.json  comprehensive_tools_test.json  detailed_test_report.html  test_report.html
ak_sv_protected_content/: extracted_info.json  raw_response.html
analyzers/: comprehensive_analyzer.py
api/: __init__.py
backup_old_project/: 11.txt  advanced_crawler.py  comprehensive_analysis_report.md  file_organizer.py  security_scanner.py  sitemap_generator.py  test_imports.py  unified_extractor_analysis_report.md  unified_extractor_final_analysis.md  unified_website_system.py  نصوصي.txt
blockers/: advanced_blocker.py  advanced_blocker_old.py
config/: settings.py
core/: __init__.py
data/: __init__.py  manager.py
extractors/: master_extractor.py
templates/: 404.html  (+39 more)
(+507 files in other folders)
