[project]
name = "website-cloner-pro"
version = "1.0.0"
description = "أداة استخراج ونسخ المواقع المتقدمة"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "beautifulsoup4>=4.13.4",
    "builtwith>=1.3.4",
    "cloudscraper>=1.2.71",
    "cssutils>=2.11.1",
    "email-validator>=2.2.0",
    "fake-useragent>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "openai>=1.97.1",
    "playwright>=1.54.0",
    "psycopg2-binary>=2.9.10",
    "python-docx>=1.2.0",
    "reportlab>=4.4.3",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "sqlalchemy>=2.0.41",
    "trafilatura>=2.0.0",
    "urllib3>=2.5.0",
    "werkzeug>=3.1.3",
]
